Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <p>陈小林博客</p>
 
-<p>Other Blog: chenxiaolin1990.github.io</p>
+<p>Other Blog: <a href="https://chenxiaolin1990.github.io/">chenxiaolin1990.github.io</a></p>
 
       <footer class="site-footer">
 
